feat(e2e):Page.feature

--- a/.prettierrc
+++ b/.prettierrc
@@ -26,6 +26,12 @@
       "options": {
         "parser": "yaml"
       }
+    },
+    {
+      "files": "*.md",
+      "options": {
+        "parser": "markdown"
+      }
     }
   ]
 }
