--- a/package.json
+++ b/package.json
@@ -12,28 +12,28 @@
   },
   "homepage": "https://henrik-geissler.github.io/WebApp",
   "dependencies": {
-    "@capacitor/core": "1.5.2",
+    "@capacitor/core": "^2.0.0",
     "@ionic/react": "^5.0.7",
     "@ionic/react-router": "^5.0.7",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.0",
-    "@testing-library/user-event": "^8.0.3",
-    "@types/jest": "^24.0.25",
-    "@types/node": "^12.12.24",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router": "^5.1.4",
+    "@testing-library/jest-dom": "^5.3.0",
+    "@testing-library/react": "^10.0.2",
+    "@testing-library/user-event": "^10.0.1",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "@types/react": "^16.9.32",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-router": "^5.1.5",
     "@types/react-router-dom": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "eslint-plugin-react": "^7.19.0",
-    "ionicons": "^5.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "ionicons": "^5.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "typescript": "3.7.4"
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "PORT=3000 react-scripts start",
@@ -65,15 +65,15 @@
     ]
   },
   "devDependencies": {
-    "@capacitor/cli": "1.5.2",
+    "@capacitor/cli": "^2.0.0",
     "codecov": "^3.6.5",
-    "cucumber": "5.0.2",
-    "expect": "24.5.0",
+    "cucumber": "^6.0.5",
+    "expect": "^25.2.7",
     "gh-pages": "^2.2.0",
     "ionic": "^5.4.16",
-    "pixelmatch": "^5.0.0",
-    "prettier": "^1.19.1",
-    "puppeteer": "1.9.0",
+    "pixelmatch": "^5.1.0",
+    "prettier": "^2.0.2",
+    "puppeteer": "^2.1.1",
     "serve": "^11.3.0",
     "standard-version": "^7.1.0"
   },
