--- a/package.json
+++ b/package.json
@@ -41,13 +41,13 @@
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "test": "yarn test-async:all",
-    "test:e2e": "PORT=3000 NODE_ENV=debug cucumber-js features",
+    "test:e2e": "PORT=3000 NODE_ENV=debug cucumber-js features --retry 4",
     "test:unit": "react-scripts test --watchAll --coverage",
     "test-async:all": "yarn test-async:unit && yarn test-async:e2e",
     "test-async:unit": "echo \"cd \"`pwd`\";yarn test:unit;exit;\" > \"`pwd`\"/test/UNIT_Test.command; chmod +x \"`pwd`\"/test/UNIT_Test.command; open \"`pwd`\"/test/UNIT_Test.command",
     "test-async:e2e": "echo \"cd \"`pwd`\";yarn test:e2e;exit;\" > \"`pwd`\"/test/E2E_Test.command; chmod +x \"`pwd`\"/test/E2E_Test.command; open \"`pwd`\"/test/E2E_Test.command",
     "test-ci:unit": "react-scripts test --watchAll=false --coverage --forceExit --detectOpenHandles --ci",
-    "test-ci:e2e": "PORT=3000 cucumber-js features --exit",
+    "test-ci:e2e": "PORT=3000 cucumber-js features --exit --retry 4",
     "prerelease-ci": "standard-version --prerelease alpha",
     "release": "git pull && standard-version",
     "eject": "react-scripts eject"
@@ -68,6 +68,7 @@
     "@capacitor/cli": "^2.0.0",
     "codecov": "^3.6.5",
     "cucumber": "^6.0.5",
+    "cucumber-pretty": "^6.0.0",
     "expect": "^25.2.7",
     "gh-pages": "^2.2.0",
     "ionic": "^5.4.16",
