--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webapp",
-  "version": "0.0.9-alpha.2",
+  "version": "0.0.9",
   "private": true,
   "author": {
     "name": "Henrik Geissler"
