--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/user-event": "^10.0.1",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.0",
+    "@types/puppeteer": "^2.0.1",
     "@types/react": "^16.9.32",
     "@types/react-dom": "^16.9.6",
     "@types/react-router": "^5.1.5",
@@ -41,13 +42,13 @@
     "predeploy": "yarn build",
     "deploy": "gh-pages -d build",
     "test": "yarn test-async:all",
-    "test:e2e": "PORT=3000 NODE_ENV=debug cucumber-js features --retry 4",
+    "test:e2e": "NODE_ENV=debug cucumber-js -p default",
     "test:unit": "react-scripts test --watchAll --coverage",
     "test-async:all": "yarn test-async:unit && yarn test-async:e2e",
     "test-async:unit": "echo \"cd \"`pwd`\";yarn test:unit;exit;\" > \"`pwd`\"/test/UNIT_Test.command; chmod +x \"`pwd`\"/test/UNIT_Test.command; open \"`pwd`\"/test/UNIT_Test.command",
     "test-async:e2e": "echo \"cd \"`pwd`\";yarn test:e2e;exit;\" > \"`pwd`\"/test/E2E_Test.command; chmod +x \"`pwd`\"/test/E2E_Test.command; open \"`pwd`\"/test/E2E_Test.command",
     "test-ci:unit": "react-scripts test --watchAll=false --coverage --forceExit --detectOpenHandles --ci",
-    "test-ci:e2e": "PORT=3000 cucumber-js features --exit --retry 4",
+    "test-ci:e2e": "cucumber-js -p default",
     "prerelease-ci": "standard-version --prerelease alpha",
     "release": "git pull && standard-version",
     "eject": "react-scripts eject"
